# openbudget

./: .gitignore  README.md  create-structure.sh  dev.sh  docker-compose.yml  makefile
backend/: Dockerfile  pyproject.toml
backend/app/api/api_v1/endpoints/: budgets.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: budget.py  mixins.py  transaction.py  user.py
frontend/: .eslintrc.js  .prettierrc  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/accounts/: AccountTransactionsView.tsx  AccountsSidebar.tsx  AddAccountModal.tsx
frontend/src/components/budget/: BudgetEditor.tsx  BudgetList.tsx  CategoryDetailPane.tsx  NewBudgetModal.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/transactions/: EnhancedTransactionList.tsx  TransactionForm.tsx  TransactionList.tsx  TransactionModal.tsx
frontend/src/contexts/: AccountContext.tsx  BudgetContext.tsx  CategoryContext.tsx  TransactionContext.tsx
frontend/src/pages/: Accounts.tsx  Budget.tsx  Dashboard.tsx  Reports.tsx  Transactions.tsx
frontend/src/services/: accountService.ts  budgetService.ts  categoryService.ts  mockData.ts  transactionService.ts
frontend/src/types/: account.ts  budget.ts  category.ts  transaction.ts
frontend/src/utils/: transactionUtils.ts
