[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openbudget-backend"
version = "0.1.0"
description = "OpenBudget - YNAB-style budgeting app backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.103.1",
    "uvicorn>=0.23.2",
    "sqlalchemy>=2.0.20",
    "pydantic>=2.3.0",
    "pydantic-settings>=2.0.3",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]

[tool.setuptools]
packages = ["app"]